--- a/_posts/2019-08-18-ansible.md
+++ b/_posts/2019-08-18-ansible.md
@@ -163,6 +163,8 @@ ansible-playbook example_hosts_alpha.yml
 
 ssh를 이용한 간단하면서 빠른 다수의 서버접근, gruop_vars, roles, tasks등의 명확한 동작에 대한 개념, jinja2를 이용한 template 파일 생성 기능이 주된 장점입니다.
 
+여러번 실행을 해도 공통된 결과인 멱등성을 가집니다.
+
 ## Disadventage
 
 os 설치와 같은 아주 기본적인 서버세팅은 불가능합니다.
