--- a/_posts/2019-08-18-ansible.md
+++ b/_posts/2019-08-18-ansible.md
@@ -58,7 +58,7 @@ example_server_alpha.xml
 ```
 ---
 - hosts: example_hosts
-  remote_user: irteamsu
+  remote_user: test
   vars:
     sever_name: hosts-alpha
   roles:
