--- a/_posts/2021-10-03-Hue.md
+++ b/_posts/2021-10-03-Hue.md
@@ -214,6 +214,29 @@ STORED AS PARQUET TBLPROPERTIES ("parquet.compression"="SNAPPY");
 
 ## Impla
 
+![JOBBROWSER](/assets/images/Impala-Architecture.png)
+
+### Sequence
+
+- 클라이언트가 직접 Impalad(프로세스)에 요청을 보냄
+- Impalad가 Hive MetaStore 및 HDFS NameNode 에서 메타 데이터를 가져옴
+- Impalad가 State store에서 데이터가 있는 다른 Impalad의 상태를 가져옴
+- 이후 Impalad는 클라이언트로부터 받은 쿼리 실행을 시작.
+
+### Important points
+
+- MapReduce를 사용하지 않음
+- Impala에서는 하이브에서 테이블을 사용할 수 있음
+일반적으로 Hive, Impala를 동시에 사용하는것이 보통이므로 Impala에서만 테이블을 생성하는경우는 거의 없다. <- 초기 버전과 다름
+- Impalad는 빠른 액세스를 위해 메타 데이터를 캐시 
+- 일반적으로 catalogd를 통해 메타데이터가 업데이트가 되면 아무런 문제가 없지만, 외부데이터 (HDFS, Hive, ...)의 변동사항으로 데이터가 변하면 refresh, invalidate metadata등을 수행할 필요가 있다.
+- Impala는 parquet 형식에 가장 적합
+- Impala는 OS 캐시를 사용함
+- 메모리에 쿼리의 중간결과를 저장한다.
+- 메모리 의존도가 매우 크다.
+- 각 노드에 128GB RAM 권장 (Cloudera 권장)
+- 일반적으로 FS에 중간결과를 저장하는 Hive에 비해 5배-100배 가량 수행속도가 빠르다
+
 https://d2.naver.com/helloworld/246342
 
 # reference 
