--- a/_posts/2021-10-23-mongo-db.md
+++ b/_posts/2021-10-23-mongo-db.md
@@ -166,12 +166,20 @@ Json의 value값은 아래와 같은 여러 type을 갖을 수 있습니다.
 
 https://khj93.tistory.com/entry/MongoDB-Window에-MongoDB-설치하기
 
-# Reference
-
-https://docs.mongodb.com/manual/tutorial/getting-started/
-
 ## lookup
 https://secretartbook.tistory.com/20
 
 ## aggregation
+
+MongoDB는 aggregation 이라는 강력한 기능을 제공한다. aggregation에 넣는 각각의 Json Object는 Pipeline으로 동작해서 다음 Json Object에 영향을 준다. Aggregation에서 제공해주는 여러 기능을 이용해서 데이터를 조합할 수 있다.
+
+![MongoDB](/assets/images/mongo-aggregation-pipeline.svg)
+
+
 https://junho94.tistory.com/11
+
+https://jaehun2841.github.io/2019/02/24/2019-02-24-mongodb-2/#group
+
+# Reference
+
+https://docs.mongodb.com/manual/tutorial/getting-started/
