--- a/_posts/2021-10-23-mongo-db.md
+++ b/_posts/2021-10-23-mongo-db.md
@@ -173,6 +173,8 @@ https://secretartbook.tistory.com/20
 
 MongoDB는 aggregation 이라는 강력한 기능을 제공한다. aggregation에 넣는 각각의 Json Object는 Pipeline으로 동작해서 다음 Json Object에 영향을 준다. Aggregation에서 제공해주는 여러 기능을 이용해서 데이터를 조합할 수 있다.
 
+> 파이프라인(pipeline) 이란, 이전 단계의 연산결과를 다음 단계연산에 이용하는 것을 의미합니다.
+
 ![MongoDB](/assets/images/mongo-aggregation-pipeline.svg)
 
 
