--- a/_posts/2021-11-14-Git.md
+++ b/_posts/2021-11-14-Git.md
@@ -13,7 +13,7 @@ tags: database study
 
 ![git](/assets/images/git.png)
 
-#Git 이란?
+#Git 이란? 현강현강
 
 [Git 공식문서](https://git-scm.com/book/ko/v2)
 
@@ -100,3 +100,5 @@ tags: database study
 # reference
 
 https://velog.io/@shin6403/Git-이란
+
+https://ux.stories.pe.kr/183
