--- a/_posts/2021-11-21-Python.md
+++ b/_posts/2021-11-21-Python.md
@@ -1,7 +1,7 @@
 ---
-title: "git"
+title: "python primary"
 date: 2021-10-30 21:53:00 +0900
-excerpt: "git"
+excerpt: "python primary"
 header:
   overlay_image: /assets/images/wallpaper.jpg
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
