--- a/_posts/2021-11-21-Python.md
+++ b/_posts/2021-11-21-Python.md
@@ -218,6 +218,27 @@ if __name__ == "__main__":
     print (add(3, 4))
   ```
   - Class
+    - 함수들의 집합을 만들고 그 집합이 개별적인 속성을 갖게 하기 위해 클래스를 사용한다.
+  
+  ![git](/assets/images/Python_class.png)
+
+```
+class Calculator:
+    def __init__(self):
+        self.result = 0
+
+    def add(self, num):
+        self.result += num
+        return self.result
+
+cal1 = Calculator()
+cal2 = Calculator()
+
+print(cal1.add(3))
+print(cal1.add(4))
+print(cal2.add(3))
+print(cal2.add(7))
+```
 
 
 ### [파이선 설치하기](https://somjang.tistory.com/entry/Windows-Windows에-Python-373-설치하기)
