--- a/_posts/2024-1-13-Speech.md
+++ b/_posts/2024-1-13-Speech.md
@@ -8,7 +8,27 @@ header:
 categories: ai/ml
 tags: ai/ml study
 ---
-# Kubernetes with Kustomize
+# Automatic Speech Recognition
+***
 
-![git](/assets/images/k8s.jpg)
+![git](../assets/images/Conversation_AI_Workflow_v02.png)
 
+# Definition
+***
+
+자동 음성 인식(Automatic Speech Recognition)이란 음성 신호(acoustic signal)를 단어(word) 혹은 음소(phoneme) 시퀀스로 변환하는 시스템
+
+### Phoneme
+***
+**음소**란 언어의 소리 체계 내에서 다른 소리와 구별되어 대립적 기능을 하는, 언어 사용자가 인식하는 소리의 최소 단위.
+
+예를 들어 한국어에서 '물', '불', '풀', '뿔'은 초성 ㅁ, ㅂ, ㅍ, ㅃ 에 의해 의미가 구별되기 때문에, /ㅁ/, /ㅂ/, /ㅍ/, /ㅃ/은 한국어에서 각자 다른 음소.
+
+# Problem Setting
+***
+
+자동 음성 인식 모델은 입력 음성 신호 X(x1,x2,…,xt)에 대해 가장 그럴듯한(likely) 음소/단어 시퀀스 Y( y1,y2,…,yn)를 추정. 
+
+따라서 자동 음성 인식 모델의 목표는 P(Y|X)를 최대화하는 음소/단어 시퀀스 Y의 추론(inference)
+
+$\hat{Y} = \underset{Y}{\operatorname{argmax}} \ P(Y|X)$
