--- a/_posts/2024-1-13-Speech.md
+++ b/_posts/2024-1-13-Speech.md
@@ -11,9 +11,9 @@ tags: ai/ml study
 # Automatic Speech Recognition
 ***
 
-![git](../assets/images/Conversation_AI_Workflow_v02.png)
+![git](/assets/images/Conversation_AI_Workflow_v02.png)
 
-# Definition
+## Definition
 ***
 
 자동 음성 인식(Automatic Speech Recognition)이란 음성 신호(acoustic signal)를 단어(word) 혹은 음소(phoneme) 시퀀스로 변환하는 시스템
@@ -24,11 +24,10 @@ tags: ai/ml study
 
 예를 들어 한국어에서 '물', '불', '풀', '뿔'은 초성 ㅁ, ㅂ, ㅍ, ㅃ 에 의해 의미가 구별되기 때문에, /ㅁ/, /ㅂ/, /ㅍ/, /ㅃ/은 한국어에서 각자 다른 음소.
 
-# Problem Setting
+## Problem Setting
 ***
 
-자동 음성 인식 모델은 입력 음성 신호 X(x1,x2,…,xt)에 대해 가장 그럴듯한(likely) 음소/단어 시퀀스 Y( y1,y2,…,yn)를 추정. 
-
+자동 음성 인식 모델은 입력 음성 신호 X(x1,x2,…,xt)에 대해 가장 그럴듯한(likely) 음소/단어 시퀀스 Y( y1,y2,…,yn)를 추정.
 따라서 자동 음성 인식 모델의 목표는 P(Y|X)를 최대화하는 음소/단어 시퀀스 Y의 추론(inference)
 
-$\hat{Y} = \underset{Y}{\operatorname{argmax}} \ P(Y|X)$
+$$\sum_{i=0}^n i^2 = \frac{(n^2+n)(2n+1)}{6}$$
