--- a/_posts/2024-1-13-Speech.md
+++ b/_posts/2024-1-13-Speech.md
@@ -7,6 +7,7 @@ header:
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
 categories: ai/ml
 tags: ai/ml study
+use_math: true
 ---
 # Automatic Speech Recognition
 ***
