--- a/_posts/2024-1-13-Speech.md
+++ b/_posts/2024-1-13-Speech.md
@@ -30,3 +30,5 @@ use_math: true
 따라서 자동 음성 인식 모델의 목표는 P(Y|X)를 최대화하는 음소/단어 시퀀스 Y의 추론(inference)
 
 $$\sum_{i=0}^n i^2 = \frac{(n^2+n)(2n+1)}{6}$$
+
+변경변경
