--- a/_posts/2021-11-21-Python.md
+++ b/_posts/2021-11-21-Python.md
@@ -3,7 +3,7 @@ title: "python primary"
 date: 2021-10-30 21:53:00 +0900
 excerpt: "python primary"
 header:
-  overlay_image: /assets/images/wallpaper.jpg
+  overlay_image: /assets/images/wallpaper.png
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
 categories: python
 tags: python study
