--- a/_posts/2024-1-13-Speech.md
+++ b/_posts/2024-1-13-Speech.md
@@ -4,6 +4,8 @@ date: 2024-1-13 12:15:00 +0900
 excerpt: "ASR"
 header:
   teaser: /assets/images/wallpaper_1.png
+  overlay_image: /assets/images/wallpaper_2.png
+  overlay_filter: 0.1 # same as adding an opacity of 0.5 to a black background
 categories: ai-ml
 tags: ai-ml study
 use_math: true
